--- a/MAVEN_with_TestNG/test-output/old/Default suite/classes.html
+++ b/MAVEN_with_TestNG/test-output/old/Default suite/classes.html
@@ -4,45 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Shivas_Maven.MAVEN_proj.Annotations_Class</td>
+<td>testNG_Assignments.Sel_Assignments183</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
+<td>Ligin_TO_Amazon</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>BC6</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>BM8</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>AM9</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>AC7</td>
-<td>&nbsp;</td></tr>
 </table>
