--- a/MAVEN_with_TestNG/test-output/emailable-report.html
+++ b/MAVEN_with_TestNG/test-output/emailable-report.html
@@ -8,14 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Only_System</th></tr>
-<tr><td><a href="#t0">TesingOnlySystemGroup</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">53</td><td>System</td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,544</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Only_System</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TesingOnlySystemGroup &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testNG_essencials.GroupingInTestNG</td><td><a href="#m0">TestCase2</a></td><td rowspan="1">1719265411584</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">TestCase3</a></td><td rowspan="1">1719265411598</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m2">TestCase4</a></td><td rowspan="1">1719265411600</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">TestCase5</a></td><td rowspan="1">1719265411602</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">amazon_Scenarios.Amazon_Scene1</td><td><a href="#m0">scene1</a></td><td rowspan="1">1719349184197</td><td rowspan="1">1731</td></tr><tr class="passedodd"><td rowspan="1">amazon_Scenarios.Amazon_Scene2</td><td><a href="#m1">Scene2</a></td><td rowspan="1">1719349194705</td><td rowspan="1">1608</td></tr><tr class="passedeven"><td rowspan="1">amazon_Scenarios.Amazon_Scene3</td><td><a href="#m2">Scene3</a></td><td rowspan="1">1719349166367</td><td rowspan="1">979</td></tr><tr class="passedodd"><td rowspan="1">amazon_Scenarios.Amazon_Scene4</td><td><a href="#m3">Scene4</a></td><td rowspan="1">1719349174287</td><td rowspan="1">893</td></tr></tbody>
 </table>
-<h2>TesingOnlySystemGroup</h2><h3 id="m0">testNG_essencials.GroupingInTestNG#TestCase2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testNG_essencials.GroupingInTestNG#TestCase3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testNG_essencials.GroupingInTestNG#TestCase4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testNG_essencials.GroupingInTestNG#TestCase5</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">amazon_Scenarios.Amazon_Scene1#scene1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">amazon_Scenarios.Amazon_Scene2#Scene2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">amazon_Scenarios.Amazon_Scene3#Scene3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">amazon_Scenarios.Amazon_Scene4#Scene4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
