--- a/MAVEN_with_TestNG/test-output/old/Default suite/classes.html
+++ b/MAVEN_with_TestNG/test-output/old/Default suite/classes.html
@@ -4,42 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testNG_essencials.GroupingInTestNG</td>
+<td>amazon_Scenarios.Amazon_Scene3</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestCase5</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TestCase4</td>
-<td>System </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TestCase3</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TestCase2</td>
-<td>System </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TestCase1</td>
-<td>smoke </td>
-</tr>
+<td>Scene3</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>Amazon_Login</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
