--- a/MAVEN_with_TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/MAVEN_with_TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e83">  <td>24/06/25 03:03:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingInTestNG.TestCase1()[pri:0, instance:testNG_essencials.GroupingInTestNG@35ef1869]">TestCase1</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>24/06/25 03:03:12</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingInTestNG.TestCase2()[pri:0, instance:testNG_essencials.GroupingInTestNG@35ef1869]">TestCase2</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>24/06/25 03:03:12</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingInTestNG.TestCase3()[pri:0, instance:testNG_essencials.GroupingInTestNG@35ef1869]">TestCase3</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>24/06/25 03:03:12</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingInTestNG.TestCase4()[pri:0, instance:testNG_essencials.GroupingInTestNG@35ef1869]">TestCase4</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>24/06/25 03:03:12</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingInTestNG.TestCase5()[pri:0, instance:testNG_essencials.GroupingInTestNG@35ef1869]">TestCase5</td> 
+<tr bgcolor="ee72e6">  <td>24/06/26 02:16:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonLaunch_Close.Amazon_Login()[pri:0, instance:amazon_Scenarios.Amazon_Scene3@5ccbeb64]">&gt;&gt;Amazon_Login</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>24/06/26 02:16:16</td>   <td>4325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Amazon_Scene3.Scene3()[pri:3, instance:amazon_Scenarios.Amazon_Scene3@5ccbeb64]">Scene3</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
